# ds1152e

./: .gitignore  README.md  pyproject.toml
docs/: validation.md
docs/official/: SHA256SUMS
rigol_cli/: __init__.py  catalog.py  cli.py  errors.py  transport.py  waveform.py
skills/ds1152e-cli/: SKILL.md
tests/: test_catalog.py  test_cli.py  test_transport.py  test_waveform.py
udev/: 99-rigol-usbtmc.rules
